--- a/dockerFile/google-quic/fuzz_google-quic/Dockerfile.google-quiche
+++ b/dockerFile/google-quic/fuzz_google-quic/Dockerfile.google-quiche
@@ -3,7 +3,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 # Use a different mirror for apt
 RUN sed -i 's/http:\/\/archive.ubuntu.com/http:\/\/archive.ubuntu.com\/ubuntu/' /etc/apt/sources.list
 
-RUN DEBIAN_FRONTEND=noninteractive apt update -y  && apt upgrade -y
+RUN DEBIAN_FRONTEND=noninteractive apt update --fix-missing -y  && apt upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive apt install -y git build-essential  graphviz curl lsb-release sudo python3-dev keyboard-configuration default-jdk
 
 WORKDIR /tmp
