--- a/dockerFile/quiche/fuzz_quiche/Dockerfile.quiche
+++ b/dockerFile/quiche/fuzz_quiche/Dockerfile.quiche
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 # Use a different mirror for apt
 RUN sed -i 's/http:\/\/archive.ubuntu.com/http:\/\/archive.ubuntu.com\/ubuntu/' /etc/apt/sources.list
 
-RUN DEBIAN_FRONTEND=noninteractive apt update -y && apt upgrade -y
+RUN DEBIAN_FRONTEND=noninteractive apt update --fix-missing -y && apt upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive apt install -y build-essential git curl graphviz cmake
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
