--- a/dockerFile/quicly/fuzz_quicly/Dockerfile.quicly
+++ b/dockerFile/quicly/fuzz_quicly/Dockerfile.quicly
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 RUN sed -i 's/http:\/\/archive.ubuntu.com/http:\/\/archive.ubuntu.com\/ubuntu/' /etc/apt/sources.list
 
-RUN DEBIAN_FRONTEND=noninteractive apt update -y && apt upgrade -y
+RUN DEBIAN_FRONTEND=noninteractive apt update --fix-missing -y && apt upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive apt install -y build-essential git curl graphviz cmake libtool libev-dev pkg-config libssl-dev
 
 # install quicly
