--- a/dockerFile/quant/fuzz_quant/Dockerfile.quant
+++ b/dockerFile/quant/fuzz_quant/Dockerfile.quant
@@ -2,23 +2,21 @@ FROM ubuntu:20.04
 RUN sed -i 's/http:\/\/archive.ubuntu.com/http:\/\/archive.ubuntu.com\/ubuntu/' /etc/apt/sources.list
 
 RUN DEBIAN_FRONTEND=noninteractive apt update -y --fix-missing && apt upgrade -y
-RUN DEBIAN_FRONTEND=noninteractive apt install -y git build-essential openjdk-11-jdk graphviz default-jdk
+
+RUN DEBIAN_FRONTEND=noninteractive apt install -y build-essential git graphviz g++ libhttp-parser-dev libbsd-dev pkg-config libssl-dev cmake
 
 WORKDIR /tmp
-RUN git clone https://github.com/ptrd/kwik.git  kwik
+RUN git clone https://github.com/NTAP/quant.git quant
+WORKDIR /tmp/quant
+RUN git checkout 511d91c3
+RUN git submodule update --init --recursive
+RUN mkdir Release
 
-WORKDIR /tmp/kwik
-RUN git checkout 745fd4e2
-RUn git submodule update --init --recursive
+WORKDIR /tmp/quant/Release
+RUN cmake -DCMAKE_BUILD_TYPE=Release ..
+RUN make
 
-COPY kwik.patch .
-RUN patch -p1 < kwik.patch
-
-RUN chmod +x gradlew
-RUN ./gradlew build
-
-
-RUN DEBIAN_FRONTEND=noninteractive apt install -y pip python3-tk lsof libssl-dev python3-dev
+RUN DEBIAN_FRONTEND=noninteractive apt install -y pip python3-tk lsof libssl-dev python3-dev default-jdk
 
 RUN pip install asgiref dnslib httpbin starlette wsproto aioquic pydot && \
     pip install asgiref dnslib httpbin starlette wsproto --no-cache-dir && \
