--- a/dockerFile/quinn/fuzz_quinn/Dockerfile.quinn
+++ b/dockerFile/quinn/fuzz_quinn/Dockerfile.quinn
@@ -1,29 +1,22 @@
 FROM ubuntu:20.04
 RUN sed -i 's/http:\/\/archive.ubuntu.com/http:\/\/archive.ubuntu.com\/ubuntu/' /etc/apt/sources.list
 
-RUN DEBIAN_FRONTEND=noninteractive apt update -y --fix-missing && apt upgrade -y
-RUN DEBIAN_FRONTEND=noninteractive apt install -y build-essential git curl graphviz default-jdk
+RUN DEBIAN_FRONTEND=noninteractive apt update --fix-missing -y && apt upgrade -y
+RUN DEBIAN_FRONTEND=noninteractive apt install -y build-essential git curl graphviz
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
 
-
 WORKDIR /tmp
-RUN git clone https://github.com/aws/s2n-quic.git  s2n-quic
+RUN git clone https://github.com/quinn-rs/quinn.git  quinn
 
-WORKDIR /tmp/s2n-quic
-RUN git checkout ec651875
-COPY cert_key.patch retry_token_exp.patch Cargo.lock .
-RUN patch -p1 < cert_key.patch
-RUN patch -p1 < retry_token_exp.patch
-RUN cargo build --release
+WORKDIR /tmp/quinn
+RUN git checkout e1e1e6e3
+COPY quinnCA.patch .
+RUN patch -p1 < quinnCA.patch
+RUN cargo build --examples
 
-
-RUN DEBIAN_FRONTEND=noninteractive apt install -y pip \
-                        python3-tk \
-                        lsof \
-                        libssl-dev \
-                        python3-dev
+RUN DEBIAN_FRONTEND=noninteractive apt install -y pip python3-tk lsof libssl-dev python3-dev default-jdk
                         
 RUN pip install asgiref dnslib httpbin starlette wsproto aioquic pydot && \
     pip install asgiref dnslib httpbin starlette wsproto --no-cache-dir && \
